# distiller-cm5-python

./: .flake8  .gitmodules  README.md  main.py  pyproject.toml  requirements.txt
client/: cli.py
client/llm_infra/: llama_manager.py
client/mid_layer/: llm_client.py  mcp_client.py
distiller_cm5_python/client/: README.md  cli.py
distiller_cm5_python/client/llm_infra/: llama_manager.py  parsing_utils.py
distiller_cm5_python/client/mid_layer/: llm_client.py  mcp_client.py
distiller_cm5_python/client/ui/: App.py  display_config.py
distiller_cm5_python/client/ui/Components/: ConversationView.qml
distiller_cm5_python/llm_server/: README.md  server.py
distiller_cm5_python/mcp_server/beep_mcp_server/: pyproject.toml
distiller_cm5_python/mcp_server/led_use/: pyproject.toml
distiller_cm5_python/mcp_server/speaker_mcp_server/: pyproject.toml
distiller_cm5_python/mcp_server/tts_use/: pyproject.toml
distiller_cm5_python/mcp_server/wifi-use/: pyproject.toml
distiller_cm5_python/utils/: README.md  config.py  default_config.json  logger.py  server_utils.py
distiller_cm5_python/utils/network/: README.md  __init__.py  mdns_service.py  run_wifi_server.py  wifi_config_cli.py  wifi_manager.py  wifi_server.py
examples/: wifi_setup_example.py
mcp_server/: README.md
mcp_server/wifi_mac_mcp_server/: pyproject.toml
mcp_server/wifi_mcp_server/: pyproject.toml
scripts/: distiller-wifi-setup.service  install-hooks.sh  install_wifi_setup.sh  wifi_setup.py
scripts/git-hooks/: commit-msg  pre-commit  pre-push
utils/: config.py
(+4 files in other folders)
