[project]
name = "distiller_cm5_python"
version = "0.1.0"
description = "python exe of distiller python client"
author = [
    {name = "PAMIRAI INC", email = "founders@pamir.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0", 
    "pydantic>=2.4.2",
    "llama-cpp-python>=0.3.9",
    "typing-extensions>=4.8.0",
    "requests>=2.31.0",
    "mcp",
    "aiohttp",
    "colorama",
    "nest_asyncio",
    "psutil>=5.9.0",
    "qasync",
    "numba",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 100
target-version = "py311"
